--- a/index.html
+++ b/index.html
@@ -14,22 +14,44 @@
   <title>Bootstrap</title>
 </head>
 <body>
-  <header class="bgimage">
-    <div class="container">
-      <h1>Headline</h1>
-    </div>
-  </header>
-
-  <div class="container">
+  <div class="services container">
+    <h2>Services</h2>
     <div class="row">
-      <h1 class="text-warning">Headline Row</h1>
-      <p class="text-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-  </div>
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-health.svg" alt="Icon">
+        <h3>General Health</h3>
+        <p>Wellness and senior exams, ultrasound, x-ray, and dental cleanings are just a few of our general health sevices.</p>
+      </section>
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-exoticpets.svg" alt="Icon">
+        <h3>Exotic Pets</h3>
+        <p>We offer specialized care for reptilies, rodents, birds, and other exotic pets.</p>
+      </section>
 
-  <div class="container-fluid">
-    <h1 class="text-warning">Headline</h1>
-    <p class="text-primary">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="clearfix visible-sm-block"></div>
+
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-grooming.svg" alt="Icon">
+        <h3>Grooming</h3>
+        <p>Our therapeutic grooming treatments help battle fleas, allergic dermatitis, and other challenging skin conditions.</p>
+      </section>
+
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-nutrition.svg" alt="Icon">
+        <h3>Nutrition</h3>
+        <p>Let our nutrition experts review your pet's diet and prescribe a custom nutrition plan for optimum health and disease prevention.</p>
+      </section>
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-petscontrol.svg" alt="Icon">
+        <h3>Pest Control</h3>
+        <p>We offer the latest advances in safe and effective prevention and treatment of fleas, ticks, worms, heart worm, and other parasites.</p>
+      </section>
+      <section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6 col-md-4 col-lg-2">
+        <img class="icon" src="images/icon-vaccinations.svg" alt="Icon">
+        <h3>Vaccinations</h3>
+        <p>Our veterinarians are experienced in modem vaccination protocols that prevent namy of the deadliest diseases in pets.</p>
+      </section>
+    </div>
   </div>
 
 
